--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@
     --small-font-size: .813rem;
     overflow-x: hidden;
     box-sizing: border-box;
+    overflow: hidden;
   }
   /*========== Responsive typography ==========*/
 @media screen and (min-width: 1120px) {
