--- a/assets/style.css
+++ b/assets/style.css
@@ -32,12 +32,6 @@
     box-sizing: border-box;
 }
 
-
-html, body {
-    width: 100%!important;
-    overflow-x: hidden!important;
-}
-
 html{
     overflow-x: hidden;
     margin: 0;
@@ -45,6 +39,11 @@ html{
 }
 
 
+
+html, body {
+  width: 100%!important;
+  overflow-x: hidden!important;
+}
 
 body{
   margin: 0;
@@ -589,6 +588,7 @@ color: #0083c4;
   }
   .container-title-projects {
     font-size: 46px;
+    padding-top: 220px;
   }
 
   .nav-container .links{
@@ -637,6 +637,7 @@ nav .logo{
 }
 .container-title-projects {
   font-size: 40px;
+  padding-top: 220px;
 }
 
 .nav-container .links{
