--- a/assets/style.css
+++ b/assets/style.css
@@ -40,10 +40,10 @@ html{
 
 
 
-html, body {
+/*html, body {
   width: 100%!important;
   overflow-x: hidden!important;
-}
+}*/
 
 body{
   margin: 0;
@@ -178,7 +178,7 @@ nav{
 
 section{
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 
 .main-container{
@@ -616,6 +616,9 @@ color: #0083c4;
       width: 80%;
       margin-bottom: 0px;
   }
+}
+section {
+  margin-bottom: 30px;
 }
 
 
