--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ section {
   cursor: pointer;
 }
 .details-container:hover {
-  transform: scale(1.1);
+  scale: 1.05;
   transition: 0.5s;
   box-shadow: 5px 5px 5px #747474;
 }
